--- a/index.html
+++ b/index.html
@@ -16,7 +16,77 @@
         function pushData(){
 
             var inputText = document.getElementById('inputText').value;
+            if(inputText == null || inputText == '' || inputText == ' '){<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Self-similarity Matrix</title>
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+</head>
+<body>
+    Matriz de verificação de auto-similaridade. 
+    <br>
+    <textarea type="text" id="inputText" rows="10" cols="50">Input your text here here text your input</textarea>
+    <br>
+    <button onclick="pushData();">Play</button>
+    <br>
+    <table id="output">
+        
+    </table>
+    <script>
+        var myArray = [];
+        function pushData(){ 
+            var inputText = document.getElementById('inputText').value;
             if(inputText == null || inputText == '' || inputText == ' '){
+                alert("Este campo não pode ficar vazio");
+                return false;
+            }
+            var regex = /,/gi; 
+            var remove = inputText.replace(regex, ''); 
+            var lower = remove.toLowerCase(); 
+            var str = lower.split(' ');
+
+            var strLength = remove.split(' ').length;
+
+            var myArray = str; 
+
+            var myArrayMirror = myArray;
+
+            for (let index = 0; index < strLength; index++) {
+                const elementA = myArray[index]; 
+
+                var table = document.getElementById('output'); 
+                var row = table.insertRow(index);
+
+                let i = 0; 
+                while(i < strLength) {
+                    const elementB = myArrayMirror[i];
+                    
+                    if(elementA == elementB){ 
+                        var cell = row.insertCell(i);
+                        // cell.innerHTML = "<img href=''>"; 
+                        cell.innerHTML = "▓▓";
+
+                        // var word = elementA; 
+                        // cell.innerHTML = word; 
+
+                    }
+                    else{
+                        var cell = row.insertCell(i);
+                        // cell.innerHTML = "<img href=''>"; 
+                        cell.innerHTML = "░░";
+
+                        // var word = elementA + ' - ' + elementB; 
+                        // cell.innerHTML = word; 
+                    } 
+                    i++; 
+                }
+            }
+        }
+    </script>
+</body>
+</html>
                 alert("Este campo não pode ficar vazio");
                 return false;
             }
