--- a/index.html
+++ b/index.html
@@ -12,35 +12,32 @@
     <script src="js/clear.js"></script>
 </head>
 <body>
-    Matriz de verificação de auto-similaridade. 
+    <header class="top"><h1>SelfSim </h1></header>
 
-    <section>
-    <br>
-    <textarea type="text" id="inputTextA" rows="10" cols="50" maxlength="3151">Input your text here here text your input</textarea>
-    <br>
-    <button onclick="pushData('inputTextA', 'inputTextA', 'outputA');">Play</button>
-    <button onclick="clearTextArea('inputTextA');">Clear Text</button>
-    <button onclick="clearTable('outputA');">Clear Table</button>
-    <br>
-    <table id="outputA"></table>
+    <aside class="controls">
+        <button onclick="pushData('inputTextA', 'inputTextA', 'outputA');">A=A</button>
+        <button onclick="clearTextArea('inputTextA');">Clear Text A</button>
+        <button onclick="clearTable('outputA');">Clear Table A</button>
+
+        <button onclick="pushData('inputTextB', 'inputTextB', 'outputB');">B=B</button>
+        <button onclick="clearTextArea('inputTextB');">Clear Text B</button>
+        <button onclick="clearTable('outputB');">Clear Table B</button>
+
+        <button onclick="pushData('inputTextA', 'inputTextB', 'outputAB')">A=B</button>
+        <button onclick="clearTable('outputAB');">Clear Table</button>
+
+    </aside>
+
+    <section class="inputs">
+        <textarea type="text" id="inputTextA" rows="15" cols="40" maxlength="3151">Input your text A here here text your input</textarea>
+        <textarea type="text" id="inputTextB" rows="15" cols="40" maxlength="3151">Input your text B here here text your input</textarea>
+        
     </section>
 
-    <section>
-    <button onclick="pushData('inputTextA', 'inputTextB', 'outputC')">==</button>
-    <table id="outputC"></table>
-    <button onclick="clearTable('outputC');">Clear Table</button>
+    <section class="outputs">
+        <table id="outputA"></table>
+        <table id="outputB"></table>
+        <table id="outputAB"></table>
     </section>
-    
-    <section>
-    <br>
-    <textarea type="text" id="inputTextB" rows="10" cols="50" maxlength="3151">Input your text here here text your input</textarea>
-    <br>
-    <button onclick="pushData('inputTextB', 'inputTextB', 'outputB');">Play</button>
-    <button onclick="clearTextArea('inputTextB');">Clear Text</button>
-    <button onclick="clearTable('outputB');">Clear Table</button>
-    <br>
-    <table id="outputB"></table>
-    </section>
-
 </body>
 </html>
