--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     <header class="top">
         <div id="logo">SelfSim</div>
             <div id="statistics">
-                <b id="wordsA"></b>
+                <b id="wordsA"></b><br>
                 <b id="wordsB"></b>
-                <b id="wordsC"></b>
             </div>
         </div>
     </header>
