--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <header class="top">
         <div id="logo">SelfSim</div>
             <div id="statistics">
-                <b id="wordsA"></b><br>
+                <b id="wordsA"></b>
                 <b id="wordsB"></b>
+                <b id="wordsC"></b>
             </div>
         </div>
     </header>
@@ -47,9 +48,9 @@
         </article>
     </section>
     <article class="outputs">
-        <table id="outputA"></table>
-        <table id="outputB"></table>
-        <table id="outputAB"></table>
+        <div id="outputA"></div>
+        <div id="outputB"></div>
+        <div id="outputAB"></div>
     </article>
 </body>
 </html>
